# virtual-scroll

./: .gitignore  Cargo.toml  PLAN.md  README.md  RELEASES  SPEC.md  TASKS.md  akdev
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
.release/: bump-version.sh  publish.sh  published_crates
crates/virtual-scroll/: Cargo.toml
crates/virtual-scroll-derive/: Cargo.toml
crates/virtual-scroll-derive/src/: lib.rs  uniffi.rs  wasm.rs
crates/virtual-scroll/src/: lib.rs  manager.rs  metrics.rs  query.rs  windowing.rs
crates/virtual-scroll/tests/: advanced_scroll_tests.rs  common.rs  edge_boundary_tests.rs  non_aligned_scroll_tests.rs  readme_example.rs  scroll_manager_tests.rs  variable_height_tests.rs
playwright-tests/: package-lock.json  package.json  playwright.config.ts  run-tests.sh
playwright-tests/react-app/: index.html  package-lock.json  package.json  vite.config.ts
playwright-tests/react-app/src/: App.tsx
playwright-tests/react-app/src/components/: ExampleMessageList.tsx  MessageList.tsx  VirtualScrollTest.tsx
playwright-tests/tests/: advanced-scroll.spec.ts  backward-pagination.spec.ts  debug.spec.ts  edge-boundary.spec.ts  edge-cases.spec.ts  forward-pagination.spec.ts  helpers.ts  initial-load.spec.ts  non-aligned-scroll.spec.ts  scroll-manager.spec.ts  scroll-stability.spec.ts  stress.spec.ts  threshold.spec.ts  variable-height.spec.ts  varied-heights.spec.ts  wasm-debug.spec.ts
playwright-tests/wasm-bindings/: Cargo.toml
playwright-tests/wasm-bindings/src/: lib.rs
specs/: spec.md  test-plan.md
