[package]
name = "virtual-scroll"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic virtual scroll state machine with pagination"

[features]
default = []
# Platform features (empty - derive macro generates platform-specific code)
uniffi = []
wasm = []

[dependencies]
# Core has no dependencies - it's a pure state machine
