[package]
name = "virtual-scroll"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic virtual scroll state machine with pagination"

[features]
default = []
# Platform features (empty - derive macro generates platform-specific code)
uniffi = []
wasm = []

[dependencies]
# Ankurah for LiveQuery and signals
ankurah = { version = "=0.7.12", features = ["derive"] }
ankql = "=0.7.12"
ankurah-proto = "=0.7.12"
ankurah-signals = "=0.7.12"
tracing = "0.1"

# Re-export derive macro for convenience
virtual-scroll-derive = { path = "../virtual-scroll-derive" }

[dev-dependencies]
ankurah-storage-sled = "=0.7.12"
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
ctor = "0.2"
tracing-subscriber = "0.3"
