[package]
name = "ankurah-virtual-scroll"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Platform-agnostic virtual scroll state machine with pagination for Ankurah"

[features]
default = []
# Platform features (empty - derive macro generates platform-specific code)
uniffi = []
wasm = []

[dependencies]
# Ankurah for LiveQuery and signals
ankurah = { version = "^0.7.13", features = ["derive"] }
ankql = "^0.7.13"
ankurah-proto = "^0.7.13"
ankurah-signals = "^0.7.13"
tracing = "0.1"

# Re-export derive macro for convenience
ankurah-virtual-scroll-derive = { path = "../virtual-scroll-derive", version = "=0.7.2" }

[dev-dependencies]
ankurah-storage-sled = "^0.7.13"
wasm-bindgen = "0.2"  # Workaround for https://github.com/ankurah/ankurah/issues/211
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
ctor = "0.2"
tracing-subscriber = "0.3"
