[package]
name = "virtual-scroll-playwright-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = []

[dependencies]
# Ankurah for model and query
ankurah = { version = "^0.7.13", features = ["derive", "wasm"] }
ankurah-signals = { version = "^0.7.13", features = ["wasm", "react", "jsvalue"] }
ankurah-storage-indexeddb-wasm = { version = "^0.7.13" }
ankql = "^0.7.13"

# Virtual scroll
ankurah-virtual-scroll = { path = "../../crates/virtual-scroll", features = ["wasm"] }

# For WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Utilities
send_wrapper = "0.6"
tokio = { version = "1", features = ["sync"] }
lazy_static = "1.4"
once_cell = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-wasm = "0.2"

# Fix for getrandom on wasm
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
